Agrego dependencias faltantes y cambio nombre de llamado de metodo de tirar Dados en Tests